@@ -25,7 +25,7 @@ class Help extends Controller{
 		if($strip == "html") {
 			$footer  =" <div id='help-box-further-info'></div>";
 			$footer .= "<div id='help-box-external-links'>";
-			$footer .= "<div class='help-box-external-link'><a target='_blank' href='/manual/'>".t('help_box_manual_link')."</a> | ";
+			$footer .= "<div class='help-box-external-link'><a target='_blank' href='/manual/index.php?lang=".LANGUAGE."'>".t('help_box_manual_link')."</a> | ";
 			$footer .= "<a target='_blank' href='http://forum.excito.net/index.php'>".t('help_box_forum_link')."</a> | ";
 			$footer .= "<a target='_blank' href='http://www.excito.com'>".t('help_box_excito_link')."</a></div>";
 			$footer .= "</div>";
